Bump spring boot and refactor deprecations